<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.registrationapp.ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo_login"
        android:src="@drawable/splash"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_50dp" />

    <LinearLayout
        android:id="@+id/ll_login_cnt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo_login"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:text="@string/login"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false" />
        <TextView
            android:id="@+id/tv_terms_and_conditions"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:textSize="@dimen/text_size_15sp"
            android:text="@string/lbl_terms_of_service"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:layout_height="wrap_content" />


    </LinearLayout>


</RelativeLayout>
